ios/Frameworks/VerovioFFI.xcframework/ios-arm64_x86_64-simulator/VerovioFFI.framework/Headers/verovio_ffi.h

typedef void* VrvToolkitHandle;
VRV_FFI_EXPORT char* vrv_ffi_get_default_options(VrvToolkitHandle handle);
VRV_FFI_EXPORT char* vrv_ffi_get_options(VrvToolkitHandle handle);
VRV_FFI_EXPORT char* vrv_ffi_get_option_usage_string(VrvToolkitHandle handle);
VRV_FFI_EXPORT char* vrv_ffi_get_descriptive_features(VrvToolkitHandle handle, const char* json_options);
VRV_FFI_EXPORT char* vrv_ffi_get_element_attr(VrvToolkitHandle handle, const char* xml_id);
VRV_FFI_EXPORT char* vrv_ffi_get_elements_at_time(VrvToolkitHandle handle, int32_t millisec);
VRV_FFI_EXPORT char* vrv_ffi_get_expansion_ids_for_element(VrvToolkitHandle handle, const char* xml_id);
VRV_FFI_EXPORT char* vrv_ffi_get_midi_values_for_element(VrvToolkitHandle handle, const char* xml_id);
VRV_FFI_EXPORT char* vrv_ffi_get_notated_id_for_element(VrvToolkitHandle handle, const char* xml_id);
VRV_FFI_EXPORT char* vrv_ffi_get_times_for_element(VrvToolkitHandle handle, const char* xml_id);
VRV_FFI_EXPORT char* vrv_ffi_get_id(VrvToolkitHandle handle);
VRV_FFI_EXPORT char* vrv_ffi_get_resource_path(VrvToolkitHandle handle);
VRV_FFI_EXPORT char* vrv_ffi_get_humdrum(VrvToolkitHandle handle);
VRV_FFI_EXPORT char* vrv_ffi_get_mei(VrvToolkitHandle handle, const char* json_options);
VRV_FFI_EXPORT char* vrv_ffi_convert_humdrum_to_humdrum(VrvToolkitHandle handle, const char* humdrum_data);
VRV_FFI_EXPORT char* vrv_ffi_convert_humdrum_to_midi(VrvToolkitHandle handle, const char* humdrum_data);
VRV_FFI_EXPORT char* vrv_ffi_convert_mei_to_humdrum(VrvToolkitHandle handle, const char* mei_data);
VRV_FFI_EXPORT char* vrv_ffi_edit_info(VrvToolkitHandle handle);
VRV_FFI_EXPORT char* vrv_ffi_validate_pae(VrvToolkitHandle handle, const char* data);
VRV_FFI_EXPORT char* vrv_ffi_render_data(VrvToolkitHandle handle, const char* data, const char* json_options);
// E group: void operations.
VRV_FFI_EXPORT void vrv_ffi_redo_layout(VrvToolkitHandle handle, const char* json_options);
VRV_FFI_EXPORT void vrv_ffi_redo_page_pitch_pos_layout(VrvToolkitHandle handle);