lib/src/verovio_bindings.dart


  late final _vrv_ffi_get_default_optionsPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_default_options');
  late final _vrv_ffi_get_default_options = _vrv_ffi_get_default_optionsPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_options(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_options(
      handle,
    );
  }

  late final _vrv_ffi_get_optionsPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_options');
  late final _vrv_ffi_get_options = _vrv_ffi_get_optionsPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_option_usage_string(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_option_usage_string(
      handle,
    );
  }

  late final _vrv_ffi_get_option_usage_stringPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_option_usage_string');
  late final _vrv_ffi_get_option_usage_string =
      _vrv_ffi_get_option_usage_stringPtr
          .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_descriptive_features(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> json_options,
  ) {
    return _vrv_ffi_get_descriptive_features(
      handle,
      json_options,
    );
  }

  late final _vrv_ffi_get_descriptive_featuresPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_descriptive_features');
  late final _vrv_ffi_get_descriptive_features =
      _vrv_ffi_get_descriptive_featuresPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_element_attr(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> xml_id,
  ) {
    return _vrv_ffi_get_element_attr(
      handle,
      xml_id,
    );
  }

  late final _vrv_ffi_get_element_attrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_element_attr');
  late final _vrv_ffi_get_element_attr =
      _vrv_ffi_get_element_attrPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_elements_at_time(
    VrvToolkitHandle handle,
    int millisec,
  ) {
    return _vrv_ffi_get_elements_at_time(
      handle,
      millisec,
    );
  }

  late final _vrv_ffi_get_elements_at_timePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Int32)>>('vrv_ffi_get_elements_at_time');
  late final _vrv_ffi_get_elements_at_time = _vrv_ffi_get_elements_at_timePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle, int)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_expansion_ids_for_element(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> xml_id,
  ) {
    return _vrv_ffi_get_expansion_ids_for_element(
      handle,
      xml_id,
    );
  }

  late final _vrv_ffi_get_expansion_ids_for_elementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_expansion_ids_for_element');
  late final _vrv_ffi_get_expansion_ids_for_element =
      _vrv_ffi_get_expansion_ids_for_elementPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_midi_values_for_element(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> xml_id,
  ) {
    return _vrv_ffi_get_midi_values_for_element(
      handle,
      xml_id,
    );
  }

  late final _vrv_ffi_get_midi_values_for_elementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_midi_values_for_element');
  late final _vrv_ffi_get_midi_values_for_element =
      _vrv_ffi_get_midi_values_for_elementPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_notated_id_for_element(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> xml_id,
  ) {
    return _vrv_ffi_get_notated_id_for_element(
      handle,
      xml_id,
    );
  }

  late final _vrv_ffi_get_notated_id_for_elementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_notated_id_for_element');
  late final _vrv_ffi_get_notated_id_for_element =
      _vrv_ffi_get_notated_id_for_elementPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_times_for_element(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> xml_id,
  ) {
    return _vrv_ffi_get_times_for_element(
      handle,
      xml_id,
    );
  }

  late final _vrv_ffi_get_times_for_elementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_times_for_element');
  late final _vrv_ffi_get_times_for_element =
      _vrv_ffi_get_times_for_elementPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_id(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_id(
      handle,
    );
  }

  late final _vrv_ffi_get_idPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_id');
  late final _vrv_ffi_get_id = _vrv_ffi_get_idPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_resource_path(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_resource_path(
      handle,
    );
  }

  late final _vrv_ffi_get_resource_pathPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_resource_path');
  late final _vrv_ffi_get_resource_path = _vrv_ffi_get_resource_pathPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_humdrum(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_humdrum(
      handle,
    );
  }

  late final _vrv_ffi_get_humdrumPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_humdrum');
  late final _vrv_ffi_get_humdrum = _vrv_ffi_get_humdrumPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_mei(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> json_options,
  ) {
    return _vrv_ffi_get_mei(
      handle,
      json_options,
    );
  }

  late final _vrv_ffi_get_meiPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_mei');
  late final _vrv_ffi_get_mei = _vrv_ffi_get_meiPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_convert_humdrum_to_humdrum(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> humdrum_data,
  ) {
    return _vrv_ffi_convert_humdrum_to_humdrum(
      handle,
      humdrum_data,
    );
  }

  late final _vrv_ffi_convert_humdrum_to_humdrumPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_convert_humdrum_to_humdrum');
  late final _vrv_ffi_convert_humdrum_to_humdrum =
      _vrv_ffi_convert_humdrum_to_humdrumPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_convert_humdrum_to_midi(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> humdrum_data,
  ) {
    return _vrv_ffi_convert_humdrum_to_midi(
      handle,
      humdrum_data,
    );
  }

  late final _vrv_ffi_convert_humdrum_to_midiPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_convert_humdrum_to_midi');
  late final _vrv_ffi_convert_humdrum_to_midi =
      _vrv_ffi_convert_humdrum_to_midiPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_convert_mei_to_humdrum(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> mei_data,
  ) {
    return _vrv_ffi_convert_mei_to_humdrum(
      handle,
      mei_data,
    );
  }

  late final _vrv_ffi_convert_mei_to_humdrumPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_convert_mei_to_humdrum');
  late final _vrv_ffi_convert_mei_to_humdrum =
      _vrv_ffi_convert_mei_to_humdrumPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_edit_info(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_edit_info(
      handle,
    );
  }

  late final _vrv_ffi_edit_infoPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_edit_info');
  late final _vrv_ffi_edit_info = _vrv_ffi_edit_infoPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_validate_pae(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _vrv_ffi_validate_pae(
      handle,
      data,
    );
  }

  late final _vrv_ffi_validate_paePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_validate_pae');
  late final _vrv_ffi_validate_pae = _vrv_ffi_validate_paePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_render_data(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> data,
    ffi.Pointer<ffi.Char> json_options,
  ) {
    return _vrv_ffi_render_data(
      handle,
      data,
      json_options,
    );
  }

  late final _vrv_ffi_render_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_render_data');
  late final _vrv_ffi_render_data = _vrv_ffi_render_dataPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          VrvToolkitHandle, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void vrv_ffi_redo_layout(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> json_options,
  ) {
    return _vrv_ffi_redo_layout(
      handle,
      json_options,
    );
  }

  late final _vrv_ffi_redo_layoutPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>>('vrv_ffi_redo_layout');
  late final _vrv_ffi_redo_layout = _vrv_ffi_redo_layoutPtr
      .asFunction<void Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  void vrv_ffi_redo_page_pitch_pos_layout(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_redo_page_pitch_pos_layout(
      handle,
    );
  }
